delete bio_write_up and add content to bio_picture partial file, then rename that file to _bio_picture_and_writeup.html.erb for formatting purposes, add some basic styling

--- a/app/views/layouts/about/_about_bio.html.erb
+++ b/app/views/layouts/about/_about_bio.html.erb
@@ -1,30 +1,22 @@
 <!-- About - Bio -->
 <div class="bio-wrapper">
 
-<br>
+  <br>
 
-<div class="row">
-  <!-- Left Column: bio pic in nonagon shape -->
-  <%= render 'layouts/about/bio/bio_picture' %>
+  <div class="row">
+    <!-- Left Column: bio pic in nonagon shape -->
+    <%= render 'layouts/about/bio/bio_picture_and_writeup' %>
 
-  <!-- Right Column: technology/ languages used -->
-  <%= render 'layouts/about/bio/bio_tech_2' %>
-</div> <!-- close first .row -->
+    <!-- Right Column: technology/ languages used -->
+    <%= render 'layouts/about/bio/bio_tech_2' %>
+  </div> <!-- close .row -->
 
 
-<div class="row">
-  <!-- Left Column: bio write up under bio pic -->
-  <%= render 'layouts/about/bio/bio_write_up' %>
-  <!-- Right Column: technology / languages used CONTINUED... -->
-  <div class="col-sm-6">
 
-  </div>
-</div> <!-- close second .row -->
-
-<br>
-<br>
-<br>
-<br>
-<br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 </div> <!-- close .bio-wrapper -->
