--- a/app/assets/stylesheets/partials/about/about_bio.scss
+++ b/app/assets/stylesheets/partials/about/about_bio.scss
@@ -1,5 +1,12 @@
 .bio-wrapper {
-  //margin-top: 4em;
+  margin-top: 4em;
+}
+
+.bio-box {
+  //border: 2px solid rgba($black, 0.1);
+}
+.write-up-wrapper {
+  margin-top: 2em;
 }
 
 .grayscale {
@@ -14,6 +21,8 @@
 /* Make bio pic a polygon (nonagon) */
 .nonagon-outside {
   position: relative;
+  display: block;
+  margin: auto;
   height: 40vmin;
   width: 40vmin;
   background: $black;
@@ -36,6 +45,7 @@
 
 .about-me-text {
   font-size: 1.5em;
+  padding: 1em 4em;
 }
 .location {
   font-size: 1.4em;
