--- a/app/views/layouts/about/_about_bio.html.erb
+++ b/app/views/layouts/about/_about_bio.html.erb
@@ -4,11 +4,10 @@
   <br>
 
   <div class="row">
-    <!-- Left Column: bio pic in nonagon shape -->
+    <!-- Left Column: bio pic and write up about me -->
     <%= render 'layouts/about/bio/bio_picture_and_writeup' %>
-
     <!-- Right Column: technology/ languages used -->
-    <%= render 'layouts/about/bio/bio_tech_2' %>
+    <%= render 'layouts/about/bio/bio_tech' %>
   </div> <!-- close .row -->
 
 
