--- a/app/views/layouts/about/bio/_bio_picture_and_writeup.html.erb
+++ b/app/views/layouts/about/bio/_bio_picture_and_writeup.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="about-me-text">
         I'm a Ruby on Rails developer with a passion for creating
-        responsive, cutting-edge designs and animations.
+        responsive, cutting-edge websites, designs and animations.
       </div>
     </div>
 
