--- a/app/views/layouts/about/bio/_bio_tech.html.erb
+++ b/app/views/layouts/about/bio/_bio_tech.html.erb
@@ -1,84 +1,89 @@
-<div class="col-sm-6" id="techWindow" style="background:tomato">
+<div class="col-sm-6" id="techWindow">
 
-<canvas id="tech-anim-canvas"></canvas>
-
-
-<script>
-  var canv = document.getElementById('tech-anim-canvas');
-  var context = canv.getContext('2d');
-  canv.style.backgroundColor = 'black';
-  canv.style.width = $('.col-sm-6').width();;
-  context.font = 'inherit';
-
-  var tech = [ 'javascript',
-               'html',
-               'css',
-               'sass',
-               'ruby',
-               'ruby_on_rails',
-               'angularjs',
-               'bootstrap',
-               'jquery',
-               'postgresql',
-               'gimp'
-             ]
-  var counter = 0;
-  var newText = true;
-  var text_y = Math.random()*(canvas.height - 0);
-  var text_x = canv.width;
-
-  function makeText(){
-    if(newText == true){
-      context.fillStyle = 'white';
-      context.fillText(tech[counter], text_x, text_y);
-      counter++;
-    }else{
-      return;
-    }
-  }
-  function checkText(){
-    if(text_x < canv.length/2){
-      newText = true;
-    }
-    else{
-      newText = false;
-    }
-  }
-  function moveText(){
-    text_x-=20;
-  }
-
-  function oneText(){
-    context.fillStyle = 'white';
-    context.font = '8px arial';
-    context.fillText(tech[counter], text_x, 30);
-    text_x--;
-  }
-
- var fps_t, fpsInterval_t, startTimet, nowt, thent, elapsedt;
- fps_t = 80;
- fpsInterval_t = 1000 / fps_t;
- thent = Date.now();
- startTimet = thent;
+  <div id="tech-table">
+    <span class="tech-row">
+      <div class="javascript tech text-center">JavaScript</div>
+      <div class="slide" id="javascriptSlide">80%</div>
+    </span>
+    <span class="tech-row">
+      <div class="html5 tech text-center">HTML5</div>
+      <div class="slide" id="html5Slide">60%</div>
+    </span>
+    <span class="tech-row">
+      <div class="css3 tech text-center">CSS3</div>
+      <div class="slide" id="css3Slide">80%</div>
+    </span>
+    <span class="tech-row">
+      <div class="ruby tech text-center">Ruby</div>
+      <div class="slide" id="rubySlide">50%</div>
+    </span>
+    <span class="tech-row">
+      <div class="ruby_on_rails tech text-center">Ruby on Rails</div>
+      <div class="slide" id="rubyonrailsSlide">90%</div>
+    </span>
+    <span class="tech-row">
+      <div class="sass tech text-center">Sass</div>
+      <div class="slide" id="sassSlide">50%</div>
+    </span>
+    <span class="tech-row">
+      <div class="Bootstrap tech text-center">Bootstrap</div>
+      <div class="slide" id="bootstrapSlide">60%</div>
+    </span>
+    <span class="tech-row">
+      <div class="jquery tech text-center">jQuery</div>
+      <div class="slide" id="jquerySlide">50%</div>
+    </span>
+    <span class="tech-row">
+      <div class="angularjs tech text-center">AngularJS</div>
+      <div class="slide" id="angularjsSlide">30%</div>
+    </span>
+    <span class="tech-row">
+      <div class="postgresql tech text-center">PostgreSQL</div>
+      <div class="slide" id="postgresqlSlide">40%</div>
+    </span>
+    <span class="tech-row">
+      <div class="gimp tech text-center">GIMP</div>
+      <div class="slide" id="gimpSlide">80%</div>
+    </span>
+  </div>
 
 
- function animateTech(){
-   nowt = Date.now();
-   elapsedt = nowt - thent;
-   if (elapsedt > fpsInterval_t) {
-     thent = nowt - (elapsedt % fpsInterval_t);
-     context.clearRect(0, 0, canv.width, canv.height);
-     //checkText();
-    // makeText();
-     //moveText();
-     oneText();
-
-
-   } // close if(elapsed > fpsInterval_t)
-   requestAnimationFrame(animateTech);
- } // close animateTech();
- animateTech();
-
-</script>
 
 </div>
+
+<script>
+
+  var fullWidth = $('#tech-table').width();
+
+  $(document).ready( function(){
+
+      $(window).scroll( function() {
+          $('.slide').show();
+          let toggle1 = $("#javascriptSlide").width() == 0.8*fullWidth ? "0" : 0.8*fullWidth;
+          $('#javascriptSlide').animate({ width: toggle1 });
+          let toggle2 = $("#html5Slide").width() == 0.6*fullWidth ? "0" : 0.6*fullWidth;
+          $('#html5Slide').animate({ width: toggle2 });
+          let toggle3 = $("#css3Slide").width() == 0.8*fullWidth ? "0" : 0.8*fullWidth;
+          $('#css3Slide').animate({ width: toggle3 });
+          let toggle4 = $("#rubySlide").width() == 0.5*fullWidth ? "0" : 0.5*fullWidth;
+          $('#rubySlide').animate({ width: toggle4 });
+          let toggle5 = $("#rubyonrailsSlide").width() == 0.9*fullWidth ? "0" : 0.9*fullWidth;
+          $('#rubyonrailsSlide').animate({ width: toggle5 });
+          let toggle6 = $("#sassSlide").width() == 0.5*fullWidth ? "0" : 0.5*fullWidth;
+          $('#sassSlide').animate({ width: toggle6 });
+          let toggle7 = $("#bootstrapSlide").width() == 0.6*fullWidth ? "0" : 0.6*fullWidth;
+          $('#bootstrapSlide').animate({ width: toggle7 });
+          let toggle8 = $("#jquerySlide").width() == 0.5*fullWidth ? "0" : 0.5*fullWidth;
+          $('#jquerySlide').animate({ width: toggle8 });
+          let toggle9 = $("#angularjsSlide").width() == 0.3*fullWidth ? "0" : 0.3*fullWidth;
+          $('#angularjsSlide').animate({ width: toggle9 });
+          let toggle10 = $("#postgresqlSlide").width() == 0.4*fullWidth ? "0" : 0.4*fullWidth;
+          $('#postgresqlSlide').animate({ width: toggle10 });
+          let toggle11 = $("#gimpSlide").width() == 0.8*fullWidth ? "0" : 0.8*fullWidth;
+          $('#gimpSlide').animate({ width: toggle11 });
+
+      });
+  });
+
+
+</script>
