--- a/app/views/layouts/about/bio/_bio_tech.html.erb
+++ b/app/views/layouts/about/bio/_bio_tech.html.erb
@@ -3,47 +3,69 @@
   <div id="tech-table">
     <span class="tech-row">
       <div class="javascript tech text-center">JavaScript</div>
-      <div class="slide" id="javascriptSlide">80%</div>
+      <div class="slide" id="javascriptSlide">
+        <span class="tiny">Frequency: </span>80%
+      </div>
     </span>
     <span class="tech-row">
       <div class="html5 tech text-center">HTML5</div>
-      <div class="slide" id="html5Slide">60%</div>
+      <div class="slide" id="html5Slide">
+        <span class="tiny">Frequency: </span>70%
+      </div>
     </span>
     <span class="tech-row">
       <div class="css3 tech text-center">CSS3</div>
-      <div class="slide" id="css3Slide">80%</div>
+      <div class="slide" id="css3Slide">
+        <span class="tiny">Frequency: </span>80%
+      </div>
     </span>
     <span class="tech-row">
       <div class="ruby tech text-center">Ruby</div>
-      <div class="slide" id="rubySlide">50%</div>
+      <div class="slide" id="rubySlide">
+        <span class="tiny">Frequency: </span>60%
+      </div>
     </span>
     <span class="tech-row">
       <div class="ruby_on_rails tech text-center">Ruby on Rails</div>
-      <div class="slide" id="rubyonrailsSlide">90%</div>
+      <div class="slide" id="rubyonrailsSlide">
+        <span class="tiny">Frequency: </span>90%
+      </div>
     </span>
     <span class="tech-row">
       <div class="sass tech text-center">Sass</div>
-      <div class="slide" id="sassSlide">50%</div>
+      <div class="slide" id="sassSlide">
+        <span class="tiny">Frequency: </span>70%
+      </div>
     </span>
     <span class="tech-row">
       <div class="Bootstrap tech text-center">Bootstrap</div>
-      <div class="slide" id="bootstrapSlide">60%</div>
+      <div class="slide" id="bootstrapSlide">
+        <span class="tiny">Frequency: </span>60%
+      </div>
     </span>
     <span class="tech-row">
       <div class="jquery tech text-center">jQuery</div>
-      <div class="slide" id="jquerySlide">50%</div>
+      <div class="slide" id="jquerySlide">
+        <span class="tiny">Frequency: </span>60%
+      </div>
     </span>
     <span class="tech-row">
       <div class="angularjs tech text-center">AngularJS</div>
-      <div class="slide" id="angularjsSlide">30%</div>
+      <div class="slide" id="angularjsSlide">
+        <span class="tiny">Frequency: </span>40%
+      </div>
     </span>
     <span class="tech-row">
       <div class="postgresql tech text-center">PostgreSQL</div>
-      <div class="slide" id="postgresqlSlide">40%</div>
+      <div class="slide" id="postgresqlSlide">
+        <span class="tiny">Frequency: </span>40%
+      </div>
     </span>
     <span class="tech-row">
       <div class="gimp tech text-center">GIMP</div>
-      <div class="slide" id="gimpSlide">80%</div>
+      <div class="slide" id="gimpSlide">
+        <span class="tiny">Frequency: </span>80%
+      </div>
     </span>
   </div>
 
@@ -51,39 +73,47 @@
 
 </div>
 
+
 <script>
+var fullWidth = $('#tech-table').width();
+var element_position = $('#tech-table').offset().top;
+var screen_height = $(window).height();
+var activation_offset = 0.5;//determines how far up the the page the element needs to be before triggering the function
+var activation_point = element_position - (screen_height * activation_offset);
+var max_scroll_height = $('body').height() - screen_height - 5;//-5 for a little bit of buffer
 
-  var fullWidth = $('#tech-table').width();
+//Does something when user scrolls to it OR
+//Does it when user has reached the bottom of the page and hasn't triggered the function yet
+$(window).on('scroll', function() {
+    var y_scroll_pos = window.pageYOffset;
 
-  $(document).ready( function(){
+    var element_in_view = y_scroll_pos > activation_point;
+    var has_reached_bottom_of_page = max_scroll_height <= y_scroll_pos && !element_in_view;
 
-      $(window).scroll( function() {
-          $('.slide').show();
-          let toggle1 = $("#javascriptSlide").width() == 0.8*fullWidth ? "0" : 0.8*fullWidth;
-          $('#javascriptSlide').animate({ width: toggle1 });
-          let toggle2 = $("#html5Slide").width() == 0.6*fullWidth ? "0" : 0.6*fullWidth;
-          $('#html5Slide').animate({ width: toggle2 });
-          let toggle3 = $("#css3Slide").width() == 0.8*fullWidth ? "0" : 0.8*fullWidth;
-          $('#css3Slide').animate({ width: toggle3 });
-          let toggle4 = $("#rubySlide").width() == 0.5*fullWidth ? "0" : 0.5*fullWidth;
-          $('#rubySlide').animate({ width: toggle4 });
-          let toggle5 = $("#rubyonrailsSlide").width() == 0.9*fullWidth ? "0" : 0.9*fullWidth;
-          $('#rubyonrailsSlide').animate({ width: toggle5 });
-          let toggle6 = $("#sassSlide").width() == 0.5*fullWidth ? "0" : 0.5*fullWidth;
-          $('#sassSlide').animate({ width: toggle6 });
-          let toggle7 = $("#bootstrapSlide").width() == 0.6*fullWidth ? "0" : 0.6*fullWidth;
-          $('#bootstrapSlide').animate({ width: toggle7 });
-          let toggle8 = $("#jquerySlide").width() == 0.5*fullWidth ? "0" : 0.5*fullWidth;
-          $('#jquerySlide').animate({ width: toggle8 });
-          let toggle9 = $("#angularjsSlide").width() == 0.3*fullWidth ? "0" : 0.3*fullWidth;
-          $('#angularjsSlide').animate({ width: toggle9 });
-          let toggle10 = $("#postgresqlSlide").width() == 0.4*fullWidth ? "0" : 0.4*fullWidth;
-          $('#postgresqlSlide').animate({ width: toggle10 });
-          let toggle11 = $("#gimpSlide").width() == 0.8*fullWidth ? "0" : 0.8*fullWidth;
-          $('#gimpSlide').animate({ width: toggle11 });
-
-      });
-  });
-
-
+    if(element_in_view || has_reached_bottom_of_page) {
+      $('.slide').show();
+      let toggle1 = $("#javascriptSlide").width() == 0.8*fullWidth ? "0" : 0.8*fullWidth;
+      $('#javascriptSlide').animate({ width: toggle1 });
+      let toggle2 = $("#html5Slide").width() == 0.7*fullWidth ? "0" : 0.7*fullWidth;
+      $('#html5Slide').animate({ width: toggle2 });
+      let toggle3 = $("#css3Slide").width() == 0.8*fullWidth ? "0" : 0.8*fullWidth;
+      $('#css3Slide').animate({ width: toggle3 });
+      let toggle4 = $("#rubySlide").width() == 0.6*fullWidth ? "0" : 0.6*fullWidth;
+      $('#rubySlide').animate({ width: toggle4 });
+      let toggle5 = $("#rubyonrailsSlide").width() == 0.9*fullWidth ? "0" : 0.9*fullWidth;
+      $('#rubyonrailsSlide').animate({ width: toggle5 });
+      let toggle6 = $("#sassSlide").width() == 0.7*fullWidth ? "0" : 0.7*fullWidth;
+      $('#sassSlide').animate({ width: toggle6 });
+      let toggle7 = $("#bootstrapSlide").width() == 0.6*fullWidth ? "0" : 0.6*fullWidth;
+      $('#bootstrapSlide').animate({ width: toggle7 });
+      let toggle8 = $("#jquerySlide").width() == 0.6*fullWidth ? "0" : 0.6*fullWidth;
+      $('#jquerySlide').animate({ width: toggle8 });
+      let toggle9 = $("#angularjsSlide").width() == 0.4*fullWidth ? "0" : 0.4*fullWidth;
+      $('#angularjsSlide').animate({ width: toggle9 });
+      let toggle10 = $("#postgresqlSlide").width() == 0.4*fullWidth ? "0" : 0.4*fullWidth;
+      $('#postgresqlSlide').animate({ width: toggle10 });
+      let toggle11 = $("#gimpSlide").width() == 0.8*fullWidth ? "0" : 0.8*fullWidth;
+      $('#gimpSlide').animate({ width: toggle11 });
+    }
+});
 </script>
