--- a/app/views/layouts/about/bio/_bio_tech.html.erb
+++ b/app/views/layouts/about/bio/_bio_tech.html.erb
@@ -75,7 +75,7 @@
 
 
 <script>
-var fullWidth = $('#tech-table').width();
+var fullWidth = $('#techWindow').width();
 var element_position = $('#tech-table').offset().top;
 var screen_height = $(window).height();
 var activation_offset = 0.5;//determines how far up the the page the element needs to be before triggering the function
