My image isn't showing as jpg so changing it to png

--- a/app/assets/stylesheets/partials/about/about_bio.scss
+++ b/app/assets/stylesheets/partials/about/about_bio.scss
@@ -30,7 +30,7 @@
 }
 .nonagon-inside {
   position: absolute;
-  background: url('me.jpg');
+  background: url('me.png');
   background-size: cover;
   top: 6px;
   left: 6px;
