--- a/app/assets/stylesheets/partials/about/about_bio.scss
+++ b/app/assets/stylesheets/partials/about/about_bio.scss
@@ -30,7 +30,7 @@
 }
 .nonagon-inside {
   position: absolute;
-  background: image-url('me.png');
+  background: image-url('../me.png');
   background-size: cover;
   top: 6px;
   left: 6px;
