fix file path to image of me in About

--- a/app/assets/stylesheets/partials/about/about_bio.scss
+++ b/app/assets/stylesheets/partials/about/about_bio.scss
@@ -30,7 +30,7 @@
 }
 .nonagon-inside {
   position: absolute;
-  background-image: url('my-pic.png');
+  background-image: image-url('my-pic.png');
   background-size: cover;
   top: 6px;
   left: 6px;
